# ONI

./: ABOUT.md  AGENTS.md  AboutMe.md  CLAUDE.md  GLOSSARY.md  LICENSE  README.md  SECURITY.md  brand.json
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: accessibility.yml  auto-index.yml  publish.yml  qa.yml  security-audit.yml  security.yml  sync-brand.yml  tests.yml  validate-docs.yml
MAIN/: INDEX.md  NEUROETHICS_ALIGNMENT.md  NEUROSECURITY_IMPLEMENTATION.md  ONI_LAYERS.md  ONI_WIKI.md  RELATED_WORK.md  brand.json
MAIN/governance/: ACCESSIBILITY.md  DATA_POLICY_FAQ.md  POST_DEPLOYMENT_ETHICS.md
MAIN/interactive-oni-visualizations/: README.md  index.html
MAIN/legacy-core/: INDEX.md
MAIN/neurosim/: README.md  __init__.py  pyproject.toml
MAIN/neurosim/cli/: __init__.py  main.py
MAIN/neurosim/core/: __init__.py
MAIN/neurosim/examples/: __init__.py  basic_simulation.py  neuron_comparison.py  oni_model_simulation.py
MAIN/neurosim/export/: __init__.py  formats.py  oni_export.py
MAIN/neurosim/ui/: __init__.py  app.py
MAIN/oni-academy/: ONI_ACADEMY.md  README.md  pyproject.toml
MAIN/oni-framework/: API.md  ONI_LAYERS.md  ONI_THREAT_MATRIX.md  README.md  pyproject.toml
MAIN/processes/: PUBLISHING_INSTRUCTIONS.md
MAIN/project/: KANBAN.md  OBSIDIAN_TASKS_2026-01-25.md  PROJECT_MANAGEMENT.md  prd.json
MAIN/publications/: PUBLISHING_INSTRUCTIONS.md
MAIN/resources/: brand.json
MAIN/shared/: threat-matrix.json
MAIN/tara/: CLAUDE.md  README.md  (+1 more)
MAIN/tara-neural-security-platform/: CLAUDE.md  README.md  pyproject.toml
MAIN/tara-nsec-platform/: API.md  CLAUDE.md  README.md  pyproject.toml
ai-working/: .ctx  .ctx.key  AGENTS.md  QI-EQUATION-RESEARCH.md  QI-FIELDJOURNAL.md  QIF-DERIVATION-LOG.md  QIF-FIELD-JOURNAL.md  QIF-TRUTH.md  QIF-WHITEPAPER-NARRATIVE.md  QIF-WHITEPAPER-v5.md
autodidact/: README.md
docs/: CNAME  RESEARCH-LIFECYCLE.md  SIGNAL_VISUALIZATION_DESIGN.md  WHY_WAVES_ARE_CIRCLES.md  content-manifest.json  index.html  index_v5.html
neuroscience-homework-todo/: README.md
neurosec-research/: README.md
neurosecurity-framework/: README.md
oni-demo-video/: package-lock.json  package.json
project/: ROADMAP.md  prd.json
(+122 files in other folders)
