[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosim"
version = "0.1.0"
description = "Neural Network Simulator for ONI Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "ONI Framework Team"}
]
keywords = [
    "neural networks",
    "neuroscience",
    "simulation",
    "spiking neurons",
    "ONI Framework",
    "computational neuroscience",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.20.0",
    "plotly>=5.0.0",
]
full = [
    "streamlit>=1.20.0",
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
]

[project.scripts]
neurosim = "neurosim.cli:cli"

[project.urls]
Homepage = "https://github.com/qikevinl/ONI"
Documentation = "https://github.com/qikevinl/ONI/tree/main/MAIN/neurosim"
Repository = "https://github.com/qikevinl/ONI"
Issues = "https://github.com/qikevinl/ONI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurosim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "C4"]
ignore = ["E501"]  # Line length handled by black
